[package]
name = "juvix-cairo-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", features = ["std"] }
mimalloc = { version = "0.1.37", default-features = false, optional = true }
clap = { version = "4.3.10", features = ["derive"] }
thiserror = { version = "1.0.40" }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["serde"] }
nom = { version = "7.0" }

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.17.0"

[features]
default = ["with_mimalloc"]
with_mimalloc = ["cairo-vm/with_mimalloc", "dep:mimalloc"]
