[package]
name = "juvix-cairo-vm"
version = "0.9.0"
edition = "2021"

[dependencies]
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", rev="4b17118", features = ["std"] }
mimalloc = { version = "0.1.37", default-features = false, optional = true }
clap = { version = "4.3.10", features = ["derive"] }
thiserror = { version = "1.0.40" }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["serde"] }
nom = { version = "7.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0" }
ark-ff = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
num-bigint = { version = "0.4", default-features = false, features = ["serde", "rand"] }
indexmap = { version = "2.2.6" }

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.17.0"

[features]
default = ["with_mimalloc"]
with_mimalloc = ["dep:mimalloc"]
